UART Send message working

--- a/Blinky_LED/Flash/Blinky.build_log.htm
+++ b/Blinky_LED/Flash/Blinky.build_log.htm
@@ -21,15 +21,18 @@ Target DLL:      Segger\JL2CM3.dll V2.99.15.0
 Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
-C:\Keil_v5\ARM\Boards\Freescale\FRDM-KL25Z\Blinky - Copy\Blinky.uvproj
+C:\Users\Josie\Documents\OnPersonDevice_Keil\Blinky_LED\Blinky.uvproj
 Project File Date:  07/03/2015
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'ULink - Flash'
+Rebuild target 'ULink - Flash'
 compiling system_MKL25Z4.c...
+assembling startup_MKL25Z4.s...
+compiling Blinky.c...
+compiling uart.c...
 linking...
-Program Size: Code=1572 RO-data=236 RW-data=8 ZI-data=1120  
+Program Size: Code=2016 RO-data=236 RW-data=8 ZI-data=1120  
 ".\Flash\Blinky.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
