--- a/Blinky_LED/Flash/Blinky.build_log.htm
+++ b/Blinky_LED/Flash/Blinky.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Josie\Documents\OnPersonDevice_Keil\Blinky_LED\Blinky.uvproj
-Project File Date:  07/03/2015
+Project File Date:  07/10/2015
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -30,10 +30,39 @@ Rebuild target 'ULink - Flash'
 compiling system_MKL25Z4.c...
 assembling startup_MKL25Z4.s...
 compiling Blinky.c...
+gps.h(16): warning:  #1-D: last line of file ends without a newline
+  */
+Blinky.c(73): warning:  #177-D: variable "j" was declared but never referenced
+        int j; 
+Blinky.c(74): warning:  #550-D: variable "buffer" was set but never used
+                        char buffer[9];
+Blinky.c(90): warning:  #223-D: function "sprintf" declared implicitly
+                lenght = sprintf (buffer, "$PSRF103,00,01,00,01*25");
+Blinky.c(138): warning:  #223-D: function "sscanf" declared implicitly
+   if(sscanf(gpsbuffer, "GPGGA,%f,%f,%c,%f,%c,%d", &time, &latitude, &ns, &longitude, &ew, &lock) >= 1) { 
+Blinky.c(161): warning:  #940-D: missing return statement at end of non-void function "getlock"
+   }
+Blinky.c(135): warning:  #177-D: variable "sample" was declared but never referenced
+        int sample;
+Blinky.c(166): warning:  #223-D: function "floor" declared implicitly
+          v = floor(v);
+Blinky.c(169): warning:  #223-D: function "floor" declared implicitly
+          v = floor(v);
+Blinky.c(206): warning:  #223-D: function "sprintf" declared implicitly
+        lenght = sprintf (buffer, "$PSRF103,00,01,00,01*25");
+Blinky.c(184): warning:  #550-D: variable "button_1" was set but never used
+        int button_1;
+Blinky.c(185): warning:  #550-D: variable "button_2" was set but never used
+        int button_2;
+Blinky.c(51): warning:  #177-D: function "LED_On" was declared but never referenced
+  __INLINE static void LED_On (void) {
+Blinky.c(60): warning:  #177-D: function "LED_Off" was declared but never referenced
+  __INLINE static void LED_Off (void) {
+Blinky.c: 14 warnings, 0 errors
 compiling uart.c...
 linking...
-Program Size: Code=2016 RO-data=236 RW-data=8 ZI-data=1120  
-".\Flash\Blinky.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=12716 RO-data=744 RW-data=24 ZI-data=1376  
+".\Flash\Blinky.axf" - 0 Error(s), 14 Warning(s).
 </pre>
 </body>
 </html>
