--- a/I2C/Flash/Blinky.build_log.htm
+++ b/I2C/Flash/Blinky.build_log.htm
@@ -30,38 +30,40 @@ Rebuild target 'ULink - Flash'
 compiling system_MKL25Z4.c...
 assembling startup_MKL25Z4.s...
 compiling Blinky.c...
-gps.h(16): warning:  #1-D: last line of file ends without a newline
-  */
-Blinky.c(71): warning:  #177-D: variable "j" was declared but never referenced
+Blinky.c(79): warning:  #177-D: variable "j" was declared but never referenced
         int j; 
-Blinky.c(72): warning:  #550-D: variable "buffer" was set but never used
+Blinky.c(80): warning:  #550-D: variable "buffer" was set but never used
                         char buffer[9];
-Blinky.c(106): warning:  #223-D: function "sscanf" declared implicitly
+Blinky.c(114): warning:  #223-D: function "sscanf" declared implicitly
    if(sscanf(gpsbuffer, "GPGGA,%f,%f,%c,%f,%c,%d", &time, &latitude, &ns, &longitude, &ew, &lock) >= 1) { 
-Blinky.c(129): warning:  #940-D: missing return statement at end of non-void function "getlock"
+Blinky.c(137): warning:  #940-D: missing return statement at end of non-void function "getlock"
    }
-Blinky.c(103): warning:  #177-D: variable "sample" was declared but never referenced
+Blinky.c(111): warning:  #177-D: variable "sample" was declared but never referenced
         int sample;
-Blinky.c(134): warning:  #223-D: function "floor" declared implicitly
-          v = floor(v);
-Blinky.c(137): warning:  #223-D: function "floor" declared implicitly
-          v = floor(v);
-Blinky.c(187): warning:  #9-D: nested comment is not allowed
-                                /*
-Blinky.c(189): warning:  #9-D: nested comment is not allowed
-                                /*read_buff[1] = 0x3 & read_buff[0];
-Blinky.c(156): warning:  #177-D: variable "read_buff_y" was declared but never referenced
+Blinky.c(158): warning:  #177-D: variable "x_msb" was declared but never referenced
+        int x_msb =0;
+Blinky.c(159): warning:  #177-D: variable "x_lsb" was declared but never referenced
+        int x_lsb = 0;
+Blinky.c(160): warning:  #550-D: variable "x" was set but never used
+        float x, y, z;
+Blinky.c(160): warning:  #550-D: variable "y" was set but never used
+        float x, y, z;
+Blinky.c(160): warning:  #550-D: variable "z" was set but never used
+        float x, y, z;
+Blinky.c(161): warning:  #177-D: variable "x2" was declared but never referenced
+        float x2;
+Blinky.c(168): warning:  #177-D: variable "read_buff_y" was declared but never referenced
         char read_buff_y[6] = {0};              
-Blinky.c(157): warning:  #177-D: variable "read_buff_z" was declared but never referenced
+Blinky.c(169): warning:  #177-D: variable "read_buff_z" was declared but never referenced
         char read_buff_z[6] = {0};
-Blinky.c(58): warning:  #177-D: function "LED_Off" was declared but never referenced
+Blinky.c(66): warning:  #177-D: function "LED_Off" was declared but never referenced
   __INLINE static void LED_Off (void) {
-Blinky.c: 13 warnings, 0 errors
+Blinky.c: 14 warnings, 0 errors
 compiling uart.c...
 compiling MKL25z_I2C.c...
 linking...
-Program Size: Code=13036 RO-data=744 RW-data=28 ZI-data=1380  
-".\Flash\Blinky.axf" - 0 Error(s), 13 Warning(s).
+Program Size: Code=14292 RO-data=872 RW-data=28 ZI-data=1380  
+".\Flash\Blinky.axf" - 0 Error(s), 14 Warning(s).
 </pre>
 </body>
 </html>
